# Django_ROS_web_docker

./: .gitignore  Dockerfile  docker-compose.yml  ros_entrypoint.sh
django_ros_web/: db.sqlite3  install.sh  install_realsense.sh  manage.py  readme.txt  requirements.txt
django_ros_web/django_ros_web/: asgi.py  settings.py  urls.py  wsgi.py
django_ros_web/main_page/: urls.py  views.py
django_ros_web/main_page/templates/: image_stream.html  index.html  layout.html  map_3d.html  mapping.html  model_3d.html  navigate.html  point_cloud.html  test.html
django_ros_web/static/css/: body.css  nav.css  side.css
django_ros_web/static/css/content/: image_stream.css  mapping.css  navigate.css  point_cloud.css
django_ros_web/static/js/: nav.js  ros3d.js  ros_web_socket.js  script.js  side.js
django_ros_web/static/js/content/: controller.js  image_stream.js  map_3d.js  mapping.js  model_3d.js  navigate.js  point_cloud.js
django_ros_ws/src/django_ros/: CMakeLists.txt  model.html  package.xml
django_ros_ws/src/django_ros/js/: ros_text_test.js  ros_web_socket.js
django_ros_ws/src/django_ros/js/content/: model_3d.js
django_ros_ws/src/django_ros/launch/: django_ros_web.launch  image_stream.launch  realsense_pointcloud_demo.launch  turtlebot_sim.launch  web_socket.launch
django_ros_ws/src/django_ros/scripts/: django_ros_run.bash  webserver.py
django_ros_ws/src/django_ros/scripts/roswww_tesr/: roswww_server.py
map/: map.pgm
