<?xml version="1.0"?>
<package format="2">
  <name>django_ros</name>
  <version>0.0.0</version>
  <description>The django_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="parallels@todo.todo">parallels</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roswww</build_depend>
  <build_export_depend>roswww</build_export_depend>
  <exec_depend>roswww</exec_depend>

  <build_depend>rosbridge_server</build_depend>
  <build_export_depend>rosbridge_server</build_export_depend>
  <exec_depend>rosbridge_server</exec_depend>
  
  <build_depend>tf2_web_republisher</build_depend>
  <build_export_depend>tf2_web_republisher</build_export_depend>
  <exec_depend>tf2_web_republisher</exec_depend>
  
  <build_export_depend>slam_gmapping</build_export_depend>
  <exec_depend>slam_gmapping</exec_depend>
  
  <build_export_depend>navigation</build_export_depend>
  <exec_depend>navigation</exec_depend>
  
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
